# cipherly

./: .dockerignore  .gitignore  Cargo.toml  README.md  cargo.toml
.github/workflows/: docker.yml  test.yml
backend/: Cargo.toml  Dockerfile  init.sh
backend/migrations/: 20240615151018_accounts.sql  20240616145252_secrets.sql  20240624120939_add_secrets_expiration.sql  20240627210649_add_secrets_expiration.sql
backend/src/: main.rs
core/: Cargo.toml
core/src/: lib.rs
deployment/: Caddyfile  compose.yml
docs/: README.adoc  docs.adoc
frontend/: Cargo.toml  Dockerfile  Trunk.toml  index.html
frontend/src/: crypto.rs  lib.rs  main.rs
