[package]
name = "secretshare"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.92"
web-sys = { version = "0.3.69", features = ["Window", "Document", "HtmlElement", "Text", "MouseEvent", "HtmlInputElement"]}

anyhow = "*"
getrandom = { version = "0.2", features = ["js"] }
rand = "*"

kem = "0.3.0-pre.0"
ml-kem = {version = "0.1.1", features = [ "deterministic" ] }

aes-gcm-siv = "0.11.1"

core = { path = "../core" }
